@@ -25,7 +25,6 @@ import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.spring.initializr.generator.buildsystem.BillOfMaterials;
@@ -47,6 +46,7 @@ import io.spring.initializr.generator.buildsystem.maven.MavenPlugin.Setting;
 import io.spring.initializr.generator.io.IndentingWriter;
 import io.spring.initializr.generator.version.VersionProperty;
 import io.spring.initializr.generator.version.VersionReference;
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.ObjectUtils;
@@ -272,12 +272,12 @@ public class MavenBuildWriter {
 		});
 	}
 
-	private Predicate<DependencyScope> hasScope(DependencyScope... validScopes) {
-		return (scope) -> Arrays.asList(validScopes).contains(scope);
+	private Predicate<@Nullable DependencyScope> hasScope(DependencyScope... validScopes) {
+		return (scope) -> scope != null && Arrays.asList(validScopes).contains(scope);
 	}
 
 	private Collection<Dependency> writeDependencies(IndentingWriter writer, DependencyContainer dependencies,
-			Predicate<DependencyScope> filter) {
+			Predicate<@Nullable DependencyScope> filter) {
 		Collection<Dependency> candidates = dependencies.items()
 			.filter((dep) -> filter.test(dep.getScope()))
 			.sorted(getDependencyComparator())
@@ -308,7 +308,7 @@ public class MavenBuildWriter {
 		});
 	}
 
-	private String scopeForType(DependencyScope type) {
+	private @Nullable String scopeForType(@Nullable DependencyScope type) {
 		if (type == null) {
 			return null;
 		}
@@ -333,8 +333,7 @@ public class MavenBuildWriter {
 			return;
 		}
 		writeElement(writer, "dependencyManagement", () -> writeCollectionElement(writer, "dependencies",
-				boms.items().sorted(Comparator.comparing(BillOfMaterials::getOrder)).collect(Collectors.toList()),
-				this::writeBom));
+				boms.items().sorted(Comparator.comparing(BillOfMaterials::getOrder)).toList(), this::writeBom));
 	}
 
 	private void writeBom(IndentingWriter writer, BillOfMaterials bom) {
@@ -347,12 +346,15 @@ public class MavenBuildWriter {
 		});
 	}
 
-	private String determineVersion(VersionReference versionReference) {
+	private @Nullable String determineVersion(@Nullable VersionReference versionReference) {
 		if (versionReference == null) {
 			return null;
 		}
-		return (versionReference.isProperty()) ? "${" + versionReference.getProperty().toStandardFormat() + "}"
-				: versionReference.getValue();
+		VersionProperty property = versionReference.getProperty();
+		if (property != null) {
+			return "${" + property.toStandardFormat() + "}";
+		}
+		return versionReference.getValue();
 	}
 
 	private void writeBuild(IndentingWriter writer, MavenBuild build) {
@@ -435,7 +437,7 @@ public class MavenBuildWriter {
 		});
 	}
 
-	private void writePluginConfiguration(IndentingWriter writer, Configuration configuration) {
+	private void writePluginConfiguration(IndentingWriter writer, @Nullable Configuration configuration) {
 		if (configuration == null || configuration.getSettings().isEmpty()) {
 			return;
 		}
@@ -626,7 +628,7 @@ public class MavenBuildWriter {
 		});
 	}
 
-	private void writeSingleElement(IndentingWriter writer, String name, Object value) {
+	private void writeSingleElement(IndentingWriter writer, String name, @Nullable Object value) {
 		if (value != null) {
 			CharSequence text = (value instanceof CharSequence) ? (CharSequence) value : value.toString();
 			if (!StringUtils.hasLength(text)) {
@@ -669,7 +671,7 @@ public class MavenBuildWriter {
 		}
 	}
 
-	private <T> void ifNotNull(T value, Consumer<T> elementWriter) {
+	private <T> void ifNotNull(@Nullable T value, Consumer<T> elementWriter) {
 		if (value != null) {
 			elementWriter.accept(value);
 		}
