@@ -18,14 +18,13 @@ package io.spring.initializr.metadata;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import io.spring.initializr.generator.version.VersionParser;
+import org.jspecify.annotations.Nullable;
 
 /**
  * A {@link ServiceCapability} listing the available dependencies defined as a
@@ -56,7 +55,7 @@ public class DependenciesCapability extends ServiceCapability<List<DependencyGro
 	 * @param id the ID of the dependency
 	 * @return the dependency or {@code null}
 	 */
-	public Dependency get(String id) {
+	public @Nullable Dependency get(String id) {
 		return this.indexedDependencies.get(id);
 	}
 
@@ -65,8 +64,7 @@ public class DependenciesCapability extends ServiceCapability<List<DependencyGro
 	 * @return all dependencies
 	 */
 	public Collection<Dependency> getAll() {
-		return Collections
-			.unmodifiableCollection(this.indexedDependencies.values().stream().distinct().collect(Collectors.toList()));
+		return this.indexedDependencies.values().stream().distinct().toList();
 	}
 
 	public void validate() {
@@ -78,7 +76,10 @@ public class DependenciesCapability extends ServiceCapability<List<DependencyGro
 	}
 
 	@Override
-	public void merge(List<DependencyGroup> otherContent) {
+	public void merge(@Nullable List<DependencyGroup> otherContent) {
+		if (otherContent == null) {
+			return;
+		}
 		otherContent.forEach((group) -> {
 			if (this.content.stream()
 				.noneMatch((it) -> group.getName() != null && group.getName().equals(it.getName()))) {
@@ -103,7 +104,10 @@ public class DependenciesCapability extends ServiceCapability<List<DependencyGro
 			}
 
 			dependency.resolve();
-			indexDependency(dependency.getId(), dependency);
+			String id = dependency.getId();
+			if (id != null) {
+				indexDependency(id, dependency);
+			}
 			for (String alias : dependency.getAliases()) {
 				indexDependency(alias, dependency);
 			}
